--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.27.2",
     "react": "^18.0.0",
     "react-native": "0.69.3",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
     "react-native-splash-screen": "^3.3.0",
