--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-native-screens": "^3.17.0",
     "react-native-splash-screen": "^3.3.0",
     "react-native-video": "^6.0.0-alpha.1",
+    "react-native-webview": "^11.23.1",
+    "react-native-youtube-iframe": "^2.2.2",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
