--- a/package.json
+++ b/package.json
@@ -10,17 +10,24 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/material-bottom-tabs": "^6.2.4",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
     "@types/redux-logger": "^3.0.9",
     "axios": "^0.27.2",
+    "expo-font": "^10.2.0",
     "react": "^18.0.0",
     "react-native": "0.69.3",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-paper": "^4.12.4",
+    "react-native-radial-gradient": "^1.1.2",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-video": "^6.0.0-alpha.1",
     "react-native-webview": "^11.23.1",
     "react-native-youtube-iframe": "^2.2.2",
