--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "NetflixClone",
+  "name": "netflixclone",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -12,6 +12,7 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-native-community/slider": "^4.3.1",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/material-bottom-tabs": "^6.2.4",
     "@react-navigation/native": "^6.0.12",
@@ -20,13 +21,13 @@
     "axios": "^0.27.2",
     "expo-font": "^10.2.0",
     "react": "^18.0.0",
-    "react-native": "0.69.3",
+    "react-native": "^0.70.1",
+    "react-native-fast-image": "^8.6.1",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-paper": "^4.12.4",
     "react-native-radial-gradient": "^1.1.2",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
-    "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-video": "^6.0.0-alpha.1",
     "react-native-webview": "^11.23.1",
@@ -65,5 +66,17 @@
       "json",
       "node"
     ]
-  }
+  },
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/priyanshuspawar/Netflix-clone.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/priyanshuspawar/Netflix-clone/issues"
+  },
+  "homepage": "https://github.com/priyanshuspawar/Netflix-clone#readme",
+  "description": ""
 }
