--- a/android/build.gradle
+++ b/android/build.gradle
@@ -16,6 +16,9 @@ buildscript {
             // Otherwise we default to the side-by-side NDK version from AGP.
             ndkVersion = "21.4.7075529"
         }
+    
+
+
     }
     repositories {
         google()
@@ -25,9 +28,15 @@ buildscript {
         classpath("com.android.tools.build:gradle:7.1.1")
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("de.undercouch:gradle-download-task:5.0.1")
+        classpath 'com.google.gms:google-services:4.3.13'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+
+
+
+
+
 }
 
 allprojects {
@@ -50,5 +59,6 @@ allprojects {
         google()
         maven { url 'https://www.jitpack.io' }
         jcenter()
+        mavenCentral()  // Maven Central repository
     }
 }
