--- a/package.json
+++ b/package.json
@@ -14,20 +14,24 @@
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-community/blur": "^4.2.0",
     "@react-native-community/slider": "^4.3.1",
-    "@react-native-firebase/app": "^12.7.4",
+    "@react-native-firebase/app": "^15.7.0",
+    "@react-native-firebase/auth": "^15.7.0",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/material-bottom-tabs": "^6.2.4",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
+    "@react-navigation/stack": "^6.3.2",
     "@types/redux-logger": "^3.0.9",
     "axios": "^0.27.2",
     "expo-font": "^10.2.0",
     "react": "^18.0.0",
     "react-native": "^0.70.3",
     "react-native-fast-image": "^8.6.1",
+    "react-native-gesture-handler": "^2.7.1",
     "react-native-image-slider-box": "^2.0.6",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.6.2",
-    "react-native-paper": "^4.12.4",
+    "react-native-paper": "5.0.0-rc.6",
     "react-native-push-notification": "^8.1.1",
     "react-native-radial-gradient": "^1.1.2",
     "react-native-safe-area-context": "^4.3.3",
