--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-community/blur": "^4.2.0",
     "@react-native-community/slider": "^4.3.1",
-    "@react-native-firebase/app": "^15.7.0",
+    "@react-native-firebase/app": "^16.4.2",
     "@react-native-firebase/auth": "^15.7.0",
+    "@react-native-firebase/firestore": "^16.4.2",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/material-bottom-tabs": "^6.2.4",
     "@react-navigation/native": "^6.0.12",
@@ -36,11 +37,13 @@
     "react-native-radial-gradient": "^1.1.2",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
+    "react-native-shared-element": "^0.8.4",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-video": "^6.0.0-alpha.1",
     "react-native-webview": "^11.23.1",
     "react-native-youtube-iframe": "^2.2.2",
+    "react-navigation-shared-element": "^3.1.3",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
